--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+**/__pycache__
 *.py[cod]
 *$py.class
 
@@ -127,6 +128,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+media
 
 # Spyder project settings
 .spyderproject
