[UPDATE] automated tasks for VSC

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,7 +20,7 @@
       {
         "label": "runserver",
         "type": "shell",
-        "command": "./venv/bin/python ./manage.py runserver",
+        "command": "./venv/bin/python3 ./manage.py runserver",
         "problemMatcher": []
       },
       {
