--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==2.1.0
 Django==4.2.7
 django-parler==2.3
 djangorestframework-jwt==1.11.0
+gunicorn==21.2.0
+packaging==23.2
 Pillow==10.1.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
