--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Pillow==10.1.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 PyJWT==1.7.1
+python-gettext==5.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 whitenoise==6.6.0
